--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,13 @@ dependencies = [
     "pandas (>=2.3.3,<3.0.0)",
     "albumentations (>=2.0.8,<3.0.0)",
     "dvc[yandex] (>=3.64.2,<4.0.0)",
-    "kaggle (>=1.8.2,<2.0.0)"
+    "kaggle (>=1.8.2,<2.0.0)",
+    "lightning (>=2.6.0,<3.0.0)",
+    "madgrad (>=1.3,<2.0)",
+    "pytorch-metric-learning (>=2.9.0,<3.0.0)",
+    "transformers (>=4.57.3,<5.0.0)",
+    "timm (>=1.0.22,<2.0.0)",
+    "tensorboard (>=2.20.0,<3.0.0)"
 
 ]
 
