--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,14 +11,22 @@ dependencies = [
     "torch (>=2.9.1,<3.0.0)",
     "pandas (>=2.3.3,<3.0.0)",
     "albumentations (>=2.0.8,<3.0.0)",
-    "dvc[yandex] (>=3.64.2,<4.0.0)",
+    "dvc[gdrive] (>=3.65.0,<4.0.0)",
     "kaggle (>=1.8.2,<2.0.0)",
     "lightning (>=2.6.0,<3.0.0)",
     "madgrad (>=1.3,<2.0)",
     "pytorch-metric-learning (>=2.9.0,<3.0.0)",
     "transformers (>=4.57.3,<5.0.0)",
     "timm (>=1.0.22,<2.0.0)",
-    "tensorboard (>=2.20.0,<3.0.0)"
+    "tensorboard (>=2.20.0,<3.0.0)",
+    "dvc-gdrive (>=3.0.1,<4.0.0)",
+    "lib (>=4.0.0,<5.0.0)",
+    "gdown (>=5.2.0,<6.0.0)",
+    "oauth2client (>=4.1.3,<5.0.0)",
+    "pyopenssl (==20.0.1)",
+    "cryptography (==36.0.2)",
+    "dvc-s3 (>=3.2.2,<4.0.0)",
+    "git-lfs (>=1.6,<2.0)",
 
 ]
 
