--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "cryptography (==36.0.2)",
     "dvc-s3 (>=3.2.2,<4.0.0)",
     "git-lfs (>=1.6,<2.0)",
+    "hydra-core (>=1.3.2,<2.0.0)",
 
 ]
 
