--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,9 @@ build-backend = "poetry.core.masonry.api"
 [dependency-groups]
 dev = [
     "pre-commit (>=4.5.0,<5.0.0)",
-    "fire (>=0.7.1,<0.8.0)"
+    "fire (>=0.7.1,<0.8.0)",
+    "isort (>=7.0.0,<8.0.0)",
+    "ruff (>=0.14.10,<0.15.0)"
 ]
 
 
